# steering-interface

./: .gitignore  README.md  package.json  todo.md
backend/: .env.example  .env.production  .vercelignore  Makefile  README.md  dependencies.py  main.py  pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py  requirements.txt
backend/core/: config.py  constants.py  models.py
backend/routers/: conversation.py  variant.py
backend/schemas/: conversation.py  feature.py  variant.py
backend/services/: conversation_service.py  llm_service.py  variant_service.py
backend/src/: main.py
backend/src/api/: __init__.py  chat.py  features.py
backend/src/core/: clustering.py  config.py  dependencies.py  llm_client.py  logging.py  services.py
backend/src/core/middleware/: __init__.py  rate_limiter.py
backend/src/core/services/: __init__.py  analysis_service.py  completion_service.py  ember_service.py  feature_service.py  variant_manager.py
backend/src/core/services/interfaces/: __init__.py  analysis_service.py  completion_service.py  feature_service.py  variant_manager.py
backend/src/core/tests/: __init__.py  test_completion_service.py  test_feature_service.py  test_integration.py  test_variant_manager.py
backend/src/models/: base_models.py  chat.py  features.py
design/: 0-design.md  1-steering-comparison.md  2-auto-steer.md  3-deploy.md  4-feature-table.md  architecture.md  backend-api.md  backend_api.md  components.md  ember-sdk-api.md  frontend.md  v0.md
docs/: api-endpoints.md  architecture.md  components.md  ember-sdk-api.md  (+1 more)
(+117 files in other folders)
